syntax = "proto3";

option java_package = "com.taskable.protobufs";
option java_outer_classname = "ProjectProto";
import "persistence.proto";


message GetProjectResponse {
  Project project = 1;
}

message GetProjectsResponse {
  repeated Project projects = 1;
}

message UpdateProjectRequest {
    optional string title = 1;
    optional string description = 2;
    optional bool archived = 3;
}

message AddProjectMembersRequest {
  repeated string emails = 1;
}

message AddProjectMembersResponse {
  repeated string invalid_emails = 1;
}

message RemoveProjectMemberRequest {
  repeated int32 member_ids = 1;
}

message ProjectGroup {
  string project_name = 1;
  repeated string students = 2;
}

message BatchCreateRequest {
  repeated ProjectGroup projects = 1;
  string created_at = 2;
}